# coarl-counterspeech

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  train_multitask.sh  train_peft.sh  train_ppo.sh
project/: data_setup.py  multitask_train.py  peft_trainer.py  ppo_trainer.py  prompting.py  reward_model.py
project/constants/: __init__.py
