[tool.poetry]
name = "coarl-counterspeech"
version = "0.1.0"
description = ""
authors = ["AmeyHengle <ameyhengle22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
absl-py = "==2.1.0"
pandas = "^2.2.2"
torch = "2.0.1"
transformers = "^4.44.2"
rouge-score = "^0.1.2"
sentencepiece = "^0.2.0"
datasets = "^2.21.0"
evaluate = "^0.4.2"
peft = "^0.12.0"
trl = "^0.10.1"
detoxify = "^0.5.2"
debater-python-api = "^5.1.4"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
